# haskell-blog-generator

./: Convert.hs  Html.hs  LICENSE.txt  Main.hs  Markup.hs  README.md  hello.hs  hello.html  hs-blog.cabal  stack.yaml
Html/: Internal.hs
app/: Main.hs  OptParse.hs
example/: Example.hs  output.html
src/: HsBlog.hs
src/HsBlog/: Convert.hs  Directory.hs  Html.hs  Markup.hs
src/HsBlog/Html/: Internal.hs
