cabal-version:      2.4
name:               hs-blog
version:            0.1.0.0
synopsis:           A custom blog generator from markup files
description:
  This package provides a static blog generator 
  from a custom markup format to HTML.
  It defines a parser for this custom markup format 
  as well as an html pretty printer EDSL. 
  It is used as the example project in the online book 
  'Learn Haskell Blog Generator'. See the README for more details.

homepage:           https://github.com/kreketjot/haskell-blog-generator
bug-reports:        https://github.com/kreketjot/haskell-blog-generator/issues
license:            BSD-3-Clause
license-file:       LICENSE.txt
author:             Andrey Vinokurov
maintainer:         kreketjot@gmail.com

-- A copyright notice.
-- copyright:
category:           Learning, Web
extra-source-files:
  CHANGELOG.md
  README.md

common common-settings
  default-language: Haskell2010
  ghc-options:      -Wall

library
  import:          common-settings
  exposed-modules:
    HsBlog
    HsBlog.Convert
    HsBlog.Html
    HsBlog.Html.Internal
    HsBlog.Markup

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , directory

  hs-source-dirs:  src

executable hs-blog-gen
  import:         common-settings
  main-is:        Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:
    , base
    , hs-blog

  hs-source-dirs: app
  ghc-options:    -O
